# Flaken

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  start_registry.bat
.github/workflows/: publish.yml  test.yml
.opencode/: viz-skin.json
flakes/help/: __init__.py  cog.py  flake.json
flakes/leveling/: __init__.py  cog.py  flake.json
flakes/moderation/: __init__.py  cog.py  flake.json
flakes/reaction_roles/: __init__.py  cog.py  flake.json
flakes/tickets/: __init__.py  cog.py  flake.json
flakes/welcome/: __init__.py  cog.py  flake.json
src/cli/: main.py
src/flaken_core/: __init__.py  installer.py  models.py
src/registry/: main.py
