[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flaken"
version = "1.0.0"
description = "Drop a flake into your code — modular command snippets for Discord bots"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["discord.py>=2.0"]

[project.scripts]
flaken = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
