[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flaken"
version = "1.0.0"
description = "Drop a flake into your code — modular command snippets for Discord bots"
readme = "README.md"
authors = [
    { name = "sharktubey", url = "https://github.com/sharktubey" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["discord", "discord.py", "bots", "modular", "cogs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["discord.py>=2.0"]

[project.urls]
Homepage = "https://flaken.vercel.app"
Repository = "https://github.com/sharktubey/Flaken"
Documentation = "https://flaken.vercel.app/docs.html"

[project.scripts]
flaken = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
